2001-07-15 16:23 GMT+1 Patrick Mast <harbour@PatrickMast.com>
   * source/rtl/profiler.prg
     + Added the <lOnlyUsed> parameter. If profiler is used like
       this Profiler(.t.), the profiler.txt will only be filled
       with used classes and/or functions.

2001-07-14 18:55 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
  * source/rtl/teditor.prg
    ! Minor fix for K_END key implementation

2001-07-13 19:45 UTC-0400 David G. Holm <dholm@jsd-llc.com>
  * source\rtl\gtwin\gtwin.c
    * Fix for extended cursor keys on international keyboards.

2001-07-12 16:45 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/pp/ppcore.c
     ! Fixed bug of translating text within logical tokens (.T., .F., .OR., .AND., and .NOT.) by adding skip logic to md_strAt().

2001-07-12 00:40 UTC+1 JFL (mafact) <jfl@mafact.com>
   * harbour/source/vm/Classe.c
     - Hb_ClsScope() Corrected
     - hb_getRrealclsName() enhanced to keep a better trace of Class tree
   * harbour/source/vm/hvm.c
     - hb_Vmdo() & hb_VmSend() enhanced to keep trace of Class tree
   * harbour/include/hbapi.h
     - Array structure modified to keep a c array of Class handle
       ( _HB_BASEARRAY )

2001-07-11 13:30 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * contrib/rdd_ads/adsfunc.c
     * adsExecuteSqlDirect() and adsExecuteSql() are fixed for the occasions,
       when query doesn't returns cursor.

2001-07-10 12:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * doc/en/gtslang.txt
  * source/rtl/gtapi.c
  * source/rtl/gtsln/gtsln.c
  * source/rtl/gtsln/kbsln.c
  * source/rtl/gtsln/keytrans.c
    * GTSLN update provided by Marek Paliwoda <paliwoda@inetia.pl>

2001-07-10 01:55 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/cmdcheck.c
     + Added missing type cast to resolve gcc warning.
   * source/pp/ppcore.c
     + Added missing type cast to resolve gcc warning.
     - Removed 4 redundant #includes already included by included hbcomp.h
